apps/headscale/service-headplane.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: headplane
  name: headplane
  namespace: homelab
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: headplane
