apps/headscale/service-headscale.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: headscale
  name: headscale
  namespace: homelab
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: headscale
