apps/headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-ingress
  namespace: homelab
  annotations:
    glance/icon: di:tailscale
    glance/name: "Headscale"
    glance/url: "https://headscale.realtong.cn/admin"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - headscale.realtong.cn
  rules:
    - host: headscale.realtong.cn
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: headplane
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  number: 8080
